--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,18 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Security - Never commit sensitive data
+config/database.js
+config/secrets.js
+*.key
+*.pem
+*.p12
+*.pfx
 
 # vercel
 .vercel
